--- a/style.css
+++ b/style.css
@@ -8,91 +8,201 @@
     --text-color:#676767;
 }
 body{
-    font-family:  'Roboto', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    font-family:  'Roboto', 'sans-serif'
 }
 div{
     /* border: 1px solid orange; */
 }
-.brand{
-    background-color: white;
-}
-.header-container{
-    display: flex;
-    position: fixed;
-    top: 0px;
-    right: 0px;
-    left: 0px;
-    justify-content: space-between;
-    border-bottom-color: grey;
-    background-color: white;
+.main{
+    padding-left: 100px !important;
     z-index: 9999;
-    padding-left: 137px;
-    padding-right: 153px;
 }
-
-
-.box-link{
-    display: flex;
-    margin-right: 17px;
+.panjang{
+    width: 100px;
+    background-color: var(--primary-color) !important;
+    font-weight: 700 !important;
 }
-.link{
-    font-weight: 700;
-    color: #676767;
-    padding-top: 10px;
-    font-size: 16;
-}
-.link:hover{
-    color: var(--secondary-color);
+.panjang:hover{
     cursor: pointer;
 }
-.link-container{
-    display: flex;
-    /* margin-right: 153px; */
-    justify-content: space-between;
+.main1{
+    padding-right: 57px;
+    
 }
-.button-container .button{
-    background-color: #007f84;
-    font-weight: 500;
-    font-size:16px;
+.course{
+    /* color: red !important; */
+    margin-right: 5px !important;
 }
-.button-container .button:hover{
-    background-color: #007f84;
-    cursor: pointer;
+.main2{
+    padding-right:120px;
 }
-.button-container{
-    padding-top: 10px;
-}
-.kotakparent{
-  margin-top: 91px;
-  width: 100%;
+.course .isi:hover{
+    color: red;
 }
 .kotaktext{
-    padding-top: 100px;
-    padding-right: 220px;
-    padding-left: 137px
+    padding-right: 150px;
+    padding-left: 100px;
+    padding-top:91px;
 }
 .maintext{
     font-size: 56px;
     color: var(--secondary-color);
-    font-weight: 400
 }
 .secondarytext{
     font-size: 24px;
-    color: #666666;
+    color: #676767;
+    font-weight: 800;
+}
+.social-media{
+    color: var(--text-color);
 }
 .kotaktext .pelajari{
-    background-color: var(--secondary-color);
+    background-color: #54b59f;
     color: white;
-    font-size: 19px;
-    height: 60px;
-    font-weight: bold;
     transition: 100ms;
+    height: 50px;
+    font-weight: 700;
+    font-size: 19px;
 }
 .kotaktext .pelajari:hover{
     background-color: white;
-    color: var(--secondary-color);
     border: 2px solid var(--secondary-color);
+    color: var(--secondary-color);
 }
-.kotakparent .sec1{
-    margin: 0px;
+.kotaktext .pelajari:active{
+    background-color:white !important;
+    color: var(--secondary-color) !important;
+    border: 2px solid var(--secondary-color) !important;
+}
+.bagian2{
+    padding-top: 80px;
+    padding-bottom: 80px;
+}
+.text2{
+    font-size: 32px;
+    color: var(--secondary-color);
+    font-weight: 700
+}
+.lingkar{
+    width: 46px;
+    background-color: gainsboro !important;
+    height: 46px;
+    font-size: 20px;
+    padding-top: 7px;
+    transition: 100ms;
+}
+.blog{
+    width: 80px !important;
+    font-size: 15px !important; 
+    padding-top: 10px;
+}
+.lingkar:hover{
+    color: #54b59f;
+    cursor: pointer;
+}
+.blog1{
+    color: var(--text-color);
+}
+.blog1:hover{
+    color: #54b59f !important;
+}
+.gambar{
+    height: 200px;
+}
+.gambar img{
+    width: 70px;
+    
+}
+.servicestext{
+    margin-right: 50px;
+}
+.services-container{
+    padding-left: 100px;
+    padding-right: 100px;
+}
+.logo img{
+    width: 220px;
+    height: 40px;
+}
+.frame{
+    padding-left: 100px;
+    padding-right: 100px;
+}
+.kotaktext1 .tombolSignIn{
+    width: 200px;
+    background-color: #54b59f;
+    color: white ;
+    font-weight: 700;
+}
+.kotaktext1 .tombolSignIn:hover{
+    background-color: white;
+    border: 2px solid var(--secondary-color);
+    color: var(--secondary-color);
+}
+@media only screen and (max-width:700px){
+    .main{
+        padding-left: 0px !important;
+    }
+    .logo img{
+        width: 150px;
+        height: 26px;
+    }   
+    .services-container{
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+    .kotaktext{
+        padding-right: 50px;
+        padding-left: 50px;
+        padding-top:30px;
+        
+    }
+    .foto{
+        padding: 0px !important;
+    }
+    .frame{
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+    .kotaktext1 .tombolSignIn{
+        width: 100%;
+        background-color: #54b59f;
+        color: white ;
+        font-weight: 700;
+    }
+    .maintext{
+        font-size: 21px;
+        margin-top: 10px;
+        font-weight: 600;
+    }
+    .secondarytext{
+        font-size: 16px;
+        margin-top: 50px;
+        margin-bottom: 50px;
+    }
+
+    .kotaktext .pelajari{
+        background-color: #54b59f;
+        color: white;
+        transition: 100ms;
+        height: 50px;
+        font-weight: 700;
+        font-size: 13px;
+        margin-bottom: 60px;
+        width: 280px;
+    }
+    .lingkar{
+        width: 26px;
+        background-color: gainsboro !important;
+        height: 26px;
+        font-size: 12px;
+        padding-top: 5px;
+        transition: 100ms;
+    }
+    .blog{
+        width: 60px !important;
+        font-size: 12px !important; 
+        padding-top: 5px; 
+    }
+    
 }
